<resources>
    <string name="app_name">CalcUp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Se abre el menu</string>
    <string name="navigation_drawer_close">Se cierra el menu</string>
    <string name="play">▶</string>
    <string name="descripcion_del_nivel">Descripción del nivel</string>
    <string name="nivel_X">Nivel X</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="comprobar">COMPROBAR</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="consejos_para_el_nivel">CONSEJOS PARA EL NIVEL</string>
    <string name="resuelve_la_siguiente_operaci_n_matematica">RESUELVE LA SIGUIENTE OPERACIÓN MATEMATICA</string>
    <string name="continua_la_serie">CONTINUA LA SERIE</string>
    <string name="clasificaci_n_general">CLASIFICACIÓN GENERAL</string>
    <string name="mejores_tiempos">Mejores tiempos</string>
    <string name="continuar">CONTINUAR</string>
    <string name="ingrese_el_resultado">Ingrese el resultado</string>
    <string name="repite_el_nickname">Repite el Nickname</string>
    <string name="nuevo_nickname">Nuevo Nickname</string>
    <string name="cambiar">Cambiar</string>
    <string name="resuelve_el_siguiente_problema">RESUELVE EL SIGUIENTE PROBLEMA</string>
    <string name="inventario">INVENTARIO</string>
    <string name="bienvenido_a_la_tienda">Bienvenido a la tienda</string>
    <string name="elija_la_opcion_correcta">Elija la opcion correcta</string>
</resources>