<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/NicknameFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_tienda_inventario">

    <LinearLayout
        android:id="@+id/contenedorCambioNickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="32dp"
        android:background="#CCFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Introduce el nuevo nombre"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNickname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="#DDDDDD"
            android:hint="@string/nuevo_nickname"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextNicknameRepetido"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="#DDDDDD"
            android:hint="@string/repite_el_nickname"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <Button
            android:id="@+id/buttonCambioNickname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:background="#6200EE"
            android:text="@string/cambiar"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
