<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="24dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toTopOf="@+id/btnViewProfile"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clasificaci_n_general"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/mejores_tiempos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ListView
                android:id="@+id/listViewClasificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnIrANiveles"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:text="@string/continuar"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>